fix: Skin: Do not skin breadcrumb textboxes - fixes #225
(integrated from master branch change 7f2c5a2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -132,7 +132,7 @@
 statusbar#statusbarviewbox,
 .hud
 {
-    textbox:not(.transparent)
+    :not(menupopup) > textbox:not(.transparent)
     {
         -moz-appearance: none !important;
         background: @background-input !important;
@@ -145,7 +145,7 @@ statusbar#statusbarviewbox,
         }
     }
 
-    textbox
+    :not(menupopup) > textbox
     {
         color: @foreground !important;
     }
