--- a/src/modules/abyss_skin/content/platform/mac/platform.less
+++ b/src/modules/abyss_skin/content/platform/mac/platform.less
@@ -34,3 +34,23 @@ page[containerOrient="vertical"]
         box-shadow: none !important;
     }
 }
+
+.widgetToolbarWrap,
+.widgetToolbarWrap:-moz-window-inactive,
+.widgetToolbarWrap:not(.embedded),
+.widgetToolbarWrap:not(.embedded):-moz-window-inactive
+{
+    background: transparent !important;
+}
+
+ko-pane tabpanel,
+page[containerOrient="vertical"]
+{
+    -moz-appearance: none !important;
+    background: @window-background;
+}
+
+tabs:not(.tabs-bottom) tab[selected="true"]:-moz-window-inactive
+{
+    background: @tab-selected-background !important;
+}
