--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -116,6 +116,13 @@
 
 }
 
+/* Main Editor */
+
+#komodo_main:not(.toolbox-hidden) #komodo-editor-vbox
+{
+    border-top: @main-toolbox-border-bottom;
+}
+
 /* Findbar */
 
 ko-findbar.hud
