--- a/src/chrome/komodo/skin/plat/shared/toolbars.less
+++ b/src/chrome/komodo/skin/plat/shared/toolbars.less
@@ -201,7 +201,7 @@ toolbox
 {
     -moz-appearance: none;
     background: @main-toolbox-background;
-    border-bottom: @main-toolbox-border-bottom !important;
+    border-bottom: 0 !important;
 }
 
 #toolbar-menubar
