Skin: Properly skin tab borders
(integrated from master branch change d2ca1d0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -48,10 +48,10 @@
     }
     
     #workspace_bottom_area,
-    #editorvbox tabbox
+    #editorvbox tabbox tabs
     {
-        border-left: @panel-border;
-        border-right: @panel-border;
+        border-left: @panel-border !important;
+        border-right: @panel-border !important;
     }
     
     #komodo-editor-vbox
