--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -120,6 +120,8 @@
 
 #komodo_main:not(.toolbox-hidden) #komodo-editor-vbox
 {
+    /* Set the border exclusively on the pane, as setting it on the toolbox
+       creates an awkward fuzzy effect when using dark color shchemes */
     border-top: @main-toolbox-border-bottom;
 }
 
