Skinning: Fix white text on white background in shell output - fixes #298
rn=

(integrated from master branch change 1c8f2fa by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -119,7 +119,8 @@
 
     richlistitem,
     listitem,
-    row
+    row,
+    textbox
     {
         color: @foreground !important;
         border-color: fade(@border, 0%) !important;
