Skinning: Make HUD buttons flat, NO gradients!
rn=

(integrated from master branch change c16c810 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -70,8 +70,7 @@
     & > button:not(.button-plain)
     {
         -moz-appearance: none !important;
-        background-color: @hud-dock-color;
-        background-image: @hud-background-image;
+        background: @hud-dock-color;
         color: @hud-foreground;
         border: 0;
         border-radius: 3px;
