--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -9,9 +9,8 @@
     @foreground-focus:      lighten(@foreground, 20%);
     @background-contrast:   darken(@_background, 10%);
     @border:                lighten(@_background, 5%);
-    @background-button:     lighten(desaturate(@_background, 5%), 5%);
-    @background-button-hover:lighten(desaturate(@_background, 5%), 2%);
-    @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+    @background-button:     @_background;
+    @background-button-hover:darken(@_background, 2%);
     @background-input:      lighten(@background-contrast, 10%);
     @background-selected:   fade(desaturate(@special, 2%), 30%);
     
@@ -68,11 +67,9 @@
     @foreground-focus:      darken(@foreground, 10%);
     @background-contrast:   darken(@_background, 5%);
     @border:                darken(@_background, 10%);
-    @background-button:     lighten(@_background, 10%);
-    @background-button-hover:lighten(@_background, 15%);
-    @background-input:      darken(@background-contrast, 10%);
-    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-    @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+    @background-button:     @background-contrast;
+    @background-button-hover:lighten(@background-contrast, 5%);
+    @background-input:      darken(@background-contrast, 5%);
     @background-selected:   fade(desaturate(@special, 5%), 60%);
     
     @background-scrollbar:          @background;
@@ -97,7 +94,7 @@
     background-image: none !important;
     color: @foreground !important;
     border-color: @border !important;
-
+    
     separator
     {
         -moz-appearance: none !important;
@@ -151,8 +148,7 @@
     :not(button) > button:not(.button-plain),
     & > button:not(.button-plain)
     {
-        background-color: @background-button !important;
-        background-image: @background-image-button !important;
+        background: @background-button !important;
         border: 1px solid @border !important;
 
         &:hover
