Commando: Slightly improve CPU usage with Commando by faking 3d (forcing GPU)
(integrated from master branch change 11b3d4b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -76,6 +76,7 @@
         opacity: 0;
         transition: opacity 0.2s linear;
         visibility: hidden;
+        transform: translateZ(0);
     }
 
     &.loading:not(.kitt) #commando-loader
