Commando: Forgot the blocked CSS, do'h
(integrated from master branch change a68a31d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -5,6 +5,14 @@
 #commando-panel
 {
     padding: 0;
+    
+    &.blocked
+    {
+        & > *
+        {
+            opacity: 0.4;
+        }
+    }
 
     #commando-search-wrapper
     {
