Commando: Packages: Added "Install Packages" to quick launch
(integrated from master branch change a0c4f43 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -462,6 +462,11 @@ page .cog-icon,
     list-style-image: @icon-customize-panes;
 }
 
+.packages-icon
+{
+    list-style-image: @icon-packages;
+}
+
 .new-template-icon
 {
     list-style-image: @icon-new-template !important;
@@ -1774,6 +1779,11 @@ window.hud-skinning statusbar
     .customize-panes-icon
     {
         list-style-image: @icon-hud-customize-panes;
+    }
+    
+    .packages-icon
+    {
+        list-style-image: @icon-hud-packages;
     }
     
     .ko-findbar-case-sensitive
