--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -142,6 +142,7 @@
 @icon-checkbox-small:           url("@{icon-url-prefix}checkmark2.svg@{icon-url-suffix}");
 @icon-checkbox-small-checked:   url("@{icon-url-prefix}checkmark.svg@{icon-url-suffix}");
 @icon-customize-panes:          url("@{icon-url-prefix}grid3.svg@{icon-url-suffix}");
+@icon-packages:          url("@{icon-url-prefix}box-add.svg@{icon-url-suffix}");
 @icon-favourite:                url("chrome://famfamfamsilk/skin/icons/star.png");
 
 /* Menu Specific Icons */
@@ -437,6 +438,7 @@
 @icon-hud-open-workspace:           url("@{icon-hud-url-prefix}books.svg@{icon-hud-url-suffix}");
 @icon-hud-gear:                     url("@{icon-hud-url-prefix}ko_cog_small.svg@{icon-hud-url-suffix}&size=14");
 @icon-hud-customize-panes:          url("@{icon-hud-url-prefix}grid3.svg@{icon-hud-url-suffix}");
+@icon-hud-packages:          url("@{icon-hud-url-prefix}box-add.svg@{icon-hud-url-suffix}");
 @icon-hud-case-sensitive:           url("@{icon-hud-url-prefix}type.svg@{icon-hud-url-suffix}");
 @icon-hud-case-insensitive:         url("@{icon-hud-url-prefix}font-size.svg@{icon-hud-url-suffix}");
 @icon-hud-case-smart-size:          url("@{icon-hud-url-prefix}text-height.svg@{icon-hud-url-suffix}");
