Package installer: Added install links in relevant places
(integrated from master branch change 7aa5b22 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -206,6 +206,13 @@ button:not([disabled="true"]):not(.button-link):not([type="menu"]),
     }
 }
 
+/* Buttons with forced icons */
+button.with-icon .button-icon
+{
+    display: block !important;
+    margin-right: 5px;
+}
+
 /* Textbox & Menu Elements */
 :-moz-any(textbox, menulist, button[type="menu"]):not(.plain)
 {
