Commando: Fix panel resizing when tip has multiple lines
yay XUL

(integrated from master branch change 21478bf by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -67,14 +67,16 @@
         }
     }
     
-    #commando-tip description
+    #commando-tip 
     {
         max-width: 490px;
-    }
-    
-    #commando-tip[tip-type="error"]
-    {
-        color: #894343 !important;
+        margin: 0;
+        padding: 4px;
+        
+        &[tip-type="error"]
+        {
+            color: #894343 !important;
+        }
     }
     
     #commando-loader
