--- a/src/chrome/komodo/skin/plat/win/_config/window.less
+++ b/src/chrome/komodo/skin/plat/win/_config/window.less
@@ -10,8 +10,8 @@
 @bottom-background:                     Window;
 @bottom-inactive-background:            Window;
 
-@main-border-color:                     ThreeDShadow;
-@main-border-color-inactive:            ThreeDShadow;
+@main-border-color:                     #BFBFBF;
+@main-border-color-inactive:            #BFBFBF;
 @main-border:                           1px solid @main-border-color;
 @main-border-inactive:                  1px solid @main-border-color-inactive;
 
