General: Added new troubleshooting options that will reset certain aspects of your Komodo configuration
rn=

(integrated from master branch change 9.2.1-244-g6677a51 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -244,6 +244,12 @@ menulist dropmarker, textbox[type="autocomplete"] dropmarker,
     list-style-image: @icon-help;
 }
 
+.button-menu-dropmarker,
+.button-menubutton-dropmarker
+{
+    list-style-image: none;
+}
+
 menu .help-icon, menuitem .help-icon
 {
     list-style-image: @icon-menu-help;
@@ -569,6 +575,11 @@ treechildren::-moz-tree-image(remotefile)
 .textbox-search-icon
 {
     list-style-image: @icon-textbox-search;
+}
+
+.bug-icon
+{
+    list-style-image: @icon-bugs;
 }
 
 /* Komodo icons */
@@ -1859,6 +1870,16 @@ window.hud-skinning statusbar
     .button-menubutton-dropmarker,
     {
         list-style-image: @icon-hud-dropmarker !important;
+    }
+    
+    .help-icon
+    {
+        list-style-image: @icon-hud-help;
+    }
+    
+    .bug-icon
+    {
+        list-style-image: @icon-hud-bugs;
     }
     
     /**
