--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -104,7 +104,7 @@
 @icon-warning:                  url("chrome://global/skin/icons/Warning.png");
 @icon-small-warning:            url("chrome://komodo/skin/global/images/warning_small.png");
 @icon-question:                 url("chrome://global/skin/icons/Question.png");
-@icon-help:                     url("chrome://komodo/skin/images/help.png");
+@icon-help:                     url("@{icon-url-prefix}question4.svg@{icon-url-suffix}");
 @icon-more:                     url("@{icon-url-prefix}arrow-down2.svg@{icon-url-suffix}");
 @icon-less:                     url("@{icon-url-prefix}arrow-up2.svg@{icon-url-suffix}");
 @icon-arrow-right-small:        url("@{icon-url-prefix}arrow-right3.svg@{icon-url-suffix}");
@@ -451,6 +451,8 @@
 @icon-hud-findpattern-wildcard:     url("@{icon-hud-url-prefix}power.svg@{icon-hud-url-suffix}");
 @icon-hud-findpattern-regex:        url("@{icon-hud-url-prefix}ko_regexp.svg@{icon-hud-url-suffix}");
 @icon-hud-crumb-arrow:              url("@{icon-hud-url-prefix}arrow-right3.svg@{icon-hud-url-suffix}");
+@icon-hud-help:                     url("@{icon-hud-url-prefix}question4.svg@{icon-hud-url-suffix}");
+@icon-hud-bugs:                     url("@{icon-hud-url-prefix}bug.svg@{icon-hud-url-suffix}");
 
 @icon-hud-statusbar-syntax-ok:      url("@{icon-hud-url-prefix}checkmark.svg@{icon-hud-url-suffix}");
 @icon-hud-statusbar-syntax-inprogress:url("@{icon-hud-url-prefix}busy4.svg@{icon-hud-url-suffix}");
