Editor: The find/replace window is now embedded into the editor, just like quick find
rn=

(integrated from master branch change 9.2.1-245-gd5a183f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/dialogs/find2.css
+++ b/src/chrome/komodo/skin/dialogs/find2.css
@@ -25,17 +25,24 @@
     border: 0 !important;
 }
 
-row > label {
+#find-box-wrap > hbox > label,
+#find-box-wrap > hbox > spacer
+{
+    width: 4.5em;
+}
+
+#find-box-wrap > hbox > spacer
+{
+    margin: 0 6px;
+}
+
+.buttons > *
+{
     width: 85px;
 }
 
 spacer.button-spacer {
     width: 96px; /* Add margin of label above */
-}
-
-#find-buttons button,
-#find-buttons checkbox {
-    width: 150px;
 }
 
 window:not(.mode-replace) #repl-row {
