Revert "Editor: The find/replace window is now embedded into the editor, just like quick find"
This reverts commit 26e31d5d8c619d05b9e1993fa397b864cf671974.

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -131,8 +131,7 @@
     richlistitem,
     listitem,
     row,
-    textbox,
-    menulist
+    textbox
     {
         color: @foreground !important;
         border-color: fade(@border, 0%) !important;
@@ -181,8 +180,7 @@
 statusbar#statusbarviewbox,
 .hud
 {
-    :not(menupopup) > textbox:not(.transparent),
-    menulist
+    :not(menupopup) > textbox:not(.transparent)
     {
         -moz-appearance: none !important;
         background: @background-input !important;
