--- a/src/chrome/komodo/skin/dialogs/find2.css
+++ b/src/chrome/komodo/skin/dialogs/find2.css
@@ -25,24 +25,17 @@
     border: 0 !important;
 }
 
-#find-box-wrap > hbox > label,
-#find-box-wrap > hbox > spacer
-{
-    width: 4.5em;
-}
-
-#find-box-wrap > hbox > spacer
-{
-    margin: 0 6px;
-}
-
-.buttons > *
-{
+row > label {
     width: 85px;
 }
 
 spacer.button-spacer {
     width: 96px; /* Add margin of label above */
+}
+
+#find-buttons button,
+#find-buttons checkbox {
+    width: 150px;
 }
 
 window:not(.mode-replace) #repl-row {
