UI: Breadcrumbs have been made to use up slightly less space in the statusbar
rn=

(integrated from master branch change 9.2.1-282-g0b1f797 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -312,7 +312,11 @@ statusbar#statusbarviewbox
         border-radius: 0 !important;
 
         margin: 0;
-        padding: 0 2px !important;
+        
+        &:not(.breadcrumb)
+        {
+            padding: 0 2px !important;
+        }
 
         & > label
         {
