--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -288,17 +288,9 @@ wizard#accountSetup
 
     .breadcrumb
     {
-        margin-right: 4px;
-        
-        &.folder .breadcrumb-arrow
+        .breadcrumb-arrow
         {
             background-image: @icon-breadcrumb-arrow;
-            background-size: 16px;
-            margin-right: -16px;
-            width: 16px;
-            max-width: 16px;
-            height: 16px;
-            opacity: 0.6;
         }
 
     }
