--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -287,7 +287,7 @@ statusbar
 /* Statusbar Buttons */
 
 statusbar:not(.bottombar) button:not([type="menu"]),
-statusbar:not(.bottombar) toolbarbutton
+statusbar:not(.bottombar) toolbarbutton:not(.breadcrumb)
 {
     -moz-appearance: @statusbar-button-appearance;
     background: @statusbar-button-background;
