--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -3,31 +3,28 @@
     -moz-appearance: none !important;
     padding: 6px;
     color: #EEE;
-    text-shadow: 0 -1px rgba(0, 0, 0, 0.3);
-    background: rgba(34, 34, 34, 0.9);
-    border-radius: 4px;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-    box-shadow: inset 0 0 0 1px rgba(255,255,255, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
-    border: 0 !important;
+    background: rgb(34, 34, 34);
+    border-radius: 2px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
 
     &.p-notification
     {
-        background-color: rgba(81, 79, 117, 0.9);
+        background-color: rgb(81, 79, 117);
     }
 
     &.p-warning
     {
-        background-color: rgba(106, 114, 78, 0.9);
+        background-color: rgb(107, 94, 56);
     }
 
     &.p-error
     {
-        background-color: rgba(114, 78, 78, 0.9);
+        background-color: rgb(114, 78, 78);
     }
     
     &.p-now
     {
-        background-color: rgba(58, 58, 58, 0.9);
+        background-color: rgb(58, 58, 58);
     }
 
     &.clickable description
