Commando: Add preview maximizing mechanic
(integrated from master branch change 9.2.1-288-g8cea9e3 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -15,21 +15,33 @@
         }
     }
     
-    #commando-preview
+    &.previewing:not(.maximized) #commando-preview
     {
         border-left: @hud-border;
+        width: 600px;
+    }
+    
+    &.previewing.maximized #commando-preview
+    {
         width: 600px;
     }
     
     #commando-panel-wrapper
     {
         width: 500px;
+        transition: visibility 10ms; /* Hack to prevent XUL from hiding the commando panel apparently */
     }
     
-    &.previewing #commando-panel-wrapper
+    &.previewing:not(.maximized) #commando-panel-wrapper
     {
         width: 250px;
     }
+    
+    &.previewing.maximized #commando-panel-wrapper
+    {
+        visibility: collapse;
+    }
+    
     #commando-search-wrapper
     {
         margin-bottom: 1px;
