Icons: Use icomoon icons for command output window
(integrated from master branch change 9.2.1-290-gd6c92d6 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -70,8 +70,8 @@
 @icon-history-forward:          url("@{icon-url-prefix}arrow-right4.svg@{icon-url-suffix}");
 @icon-refresh:                  url("chrome://komodo/skin/global/images/refresh.png");
 @icon-goback:                   url("chrome://komodo/skin/global/images/goBack.png");
-@icon-find-stop:                url("chrome://komodo/skin/images/find_stop.png");
-@icon-find-stop-disabled:       url("chrome://komodo/skin/images/find_stop_disable.png");
+@icon-find-stop:                url("@{icon-url-prefix}stop2.svg@{icon-url-suffix}");
+@icon-find-stop-disabled:       url("@{icon-url-prefix}stop2.svg@{icon-url-suffix}");
 @icon-native-undo:              url("@{icon-url-prefix}undo2.svg@{icon-url-suffix}");
 @icon-native-redo:              url("@{icon-url-prefix}redo2.svg@{icon-url-suffix}");
 @icon-find-copy:                url("chrome://fugue/skin/icons/clipboard--plus.png");
@@ -97,8 +97,8 @@
 @icon-italictext:               url("chrome://komodo/skin/images/italicButton.png");
 @icon-italictext-disabled:      url("chrome://komodo/skin/images/italicButton_disable.png");
 @icon-clear-text:               url("chrome://fugue/skin/icons/application-run.png");
-@icon-bulletlist:               url("chrome://komodo/skin/images/bulletlist.png");
-@icon-bulletlist-disabled:      url("chrome://komodo/skin/images/bulletlist_disable.png");
+@icon-bulletlist:               url("@{icon-url-prefix}list.svg@{icon-url-suffix}");
+@icon-bulletlist-disabled:      url("@{icon-url-prefix}list.svg@{icon-url-suffix}");
 
 /* Global Symbols */
 @icon-warning:                  url("chrome://global/skin/icons/Warning.png");
