Icons: Added the power icon
(integrated from master branch change 9.2.1-308-g60c2128 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -165,6 +165,7 @@
 /* Miscellaneous */
 @icon-server-pref:              url("chrome://komodo/skin/global/images/serverAccount.png");
 @icon-run-command:              url("@{icon-url-prefix}play4.svg@{icon-url-suffix}");
+@icon-power:                    url("@{icon-url-prefix}power.svg@{icon-url-suffix}");
 @icon-print:                    url("@{icon-url-prefix}print.svg@{icon-url-suffix}");
 @icon-pin:                      url("@{icon-url-prefix}pushpin.svg@{icon-url-suffix}");
 @icon-pin-selected:             url("@{icon-selected-url-prefix}pushpin.svg@{icon-selected-url-suffix}"); /* OSX Only */
@@ -453,6 +454,7 @@
 @icon-hud-crumb-arrow:              url("@{icon-hud-url-prefix}arrow-right3.svg@{icon-hud-url-suffix}");
 @icon-hud-help:                     url("@{icon-hud-url-prefix}question4.svg@{icon-hud-url-suffix}");
 @icon-hud-bugs:                     url("@{icon-hud-url-prefix}bug.svg@{icon-hud-url-suffix}");
+@icon-hud-power:                    url("@{icon-hud-url-prefix}power.svg@{icon-hud-url-suffix}");
 
 @icon-hud-statusbar-syntax-ok:      url("@{icon-hud-url-prefix}checkmark.svg@{icon-hud-url-suffix}");
 @icon-hud-statusbar-syntax-inprogress:url("@{icon-hud-url-prefix}busy4.svg@{icon-hud-url-suffix}");
