--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -489,6 +489,11 @@ page .cog-icon,
     list-style-image: @icon-run-command;
 }
 
+.power-icon
+{
+    list-style-image: @icon-power;
+}
+
 .next-buffer-icon
 {
     list-style-image: @icon-next-buffer;
@@ -1859,6 +1864,11 @@ window.hud-skinning statusbar
     .ko-findbar-pattern-type[value="FOT_REGEX_PYTHON"]
     {
         list-style-image: @icon-hud-findpattern-regex !important;
+    }
+    
+    .power-icon
+    {
+        list-style-image: @icon-hud-power;
     }
 
     toolbarbutton > dropmarker
