UI: Added the "New Tab" command, this shows the quick start page whenever you open a new tab
rn=

(integrated from master branch change 9.2.1-341-ge732c3f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -179,6 +179,7 @@
 @icon-toggle-right-pane-checked:url("@{icon-selected-url-prefix}ko_layout-right4.svg@{icon-selected-url-suffix}");
 @icon-toggle-bottom-pane-checked:url("@{icon-selected-url-prefix}ko_layout-bottom4.svg@{icon-selected-url-suffix}");
 @icon-tabpicker:                url("@{icon-url-prefix}ko_tab-down.svg@{icon-url-suffix}");
+@icon-tab:                      url("@{icon-url-prefix}plus.svg@{icon-url-suffix}");
 @icon-previous-diff:            url("@{icon-url-prefix}arrow-up16.svg@{icon-url-suffix}");
 @icon-next-diff:                url("@{icon-url-prefix}arrow-down16.svg@{icon-url-suffix}");
 @icon-reveal-in-editor:         url("@{icon-url-prefix}file.svg@{icon-url-suffix}");
