--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -1559,6 +1559,11 @@ ko-pane[type="icons"]
 
 }
 
+.newtab-icon
+{
+    list-style-image: @icon-tab !important;
+}
+
 /* Notification Widget */
 
 #notificationWidget
