--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -321,7 +321,7 @@ toolbar#nav-bar
 
 /* Quick Launch */
 
-#quicklaunch
+vbox[anonid="quickstart"]
 {
     border: 0 !important;
     border-radius: 0 !important;
