--- a/src/chrome/komodo/skin/plat/shared/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/tabs.less
@@ -74,6 +74,11 @@ spacer.tabs-left, spacer.tabs-right
     border-top: @main-toolbox-border-bottom !important;
 }
 
+:not(#tabbed-view) > tabs toolbarbutton[anonid="tabs-new"]
+{
+    visibility: collapse;
+}
+
 tabs:not(.tabs-bottom)
 {
     border: none;
@@ -168,6 +173,16 @@ tabs:not(.tabs-bottom)
     }
 }
 
+tabs .tabstrip-box > toolbarbutton
+{
+    opacity: 0.7;
+
+    &:hover 
+    {
+        opacity: 1.0;
+    }
+}
+
 /**
  * Tab selection.
  */
@@ -177,16 +192,6 @@ tabs:not(.tabs-bottom)
     padding-left: 0;
     padding-right: 0;
     background: inherit;
-
-    & > image
-    {
-       opacity: 0.7;
-    }
-
-    &:hover > image
-    {
-        opacity: 1.0;
-    }
 
     & > .toolbarbutton-menu-dropmarker
     {
@@ -361,6 +366,16 @@ tabs:not(.tabs-bottom) tab
         width: 8px;
         margin: 0px;
         padding: 0px;
+    }
+    
+    &[alt_image="quickstart"] .tab-icons
+    {
+        visibility: collapse;
+    }
+    
+    &[alt_image="quickstart"]:first-child:last-child .tab-close-button
+    {
+        visibility: collapse;
     }
 
 }
