UI: Remove the (now useless) url prefix variable and simplify the suffix
(integrated from master branch change 9.2.1-352-g1de9d94 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -205,7 +205,9 @@ menu .menu-right
 
 menulist dropmarker, textbox[type="autocomplete"] dropmarker,
 .button-menubutton-dropmarker,
+.toolbarbutton-menu-dropmarker
 {
+    -moz-appearance: none !important;
     list-style-image: @icon-dropmarker !important;
     width: 16px;
 }
