--- a/src/modules/iconset_classic/skin/config.less
+++ b/src/modules/iconset_classic/skin/config.less
@@ -1,7 +1,7 @@
-@icon-url-suffix:               "?fill=rgb(75,75,75)";
-@icon-toolbar-url-suffix:       "?fill=rgb(75,75,75)";
-@icon-widget-url-suffix:        "?fill=rgb(75,75,75)";
-@icon-selected-url-suffix:      "?fill=rgb(55, 90, 145)";
+@icon-suffix:               "?fill=rgb(75,75,75)";
+@icon-toolbar-suffix:       "?fill=rgb(75,75,75)";
+@icon-widget-suffix:        "?fill=rgb(75,75,75)";
+@icon-selected-suffix:      "?fill=rgb(55, 90, 145)";
 
 /* Generic Icons */
 @icon-gear:                     url("chrome://famfamfamsilk/skin/icons/cog.png");
