--- a/src/modules/iconset_dark/skin/config.less
+++ b/src/modules/iconset_dark/skin/config.less
@@ -1,7 +1,7 @@
-@icon-url-suffix:               "?preset=base&iconset=dark";
-@icon-toolbar-url-suffix:       "?preset=toolbar&iconset=dark";
-@icon-widget-url-suffix:        "?preset=widgets&iconset=dark";
-@icon-selected-url-suffix:      "?preset=selected&iconset=dark";
+@icon-suffix:               "?preset=base&iconset=dark";
+@icon-toolbar-suffix:       "?preset=toolbar&iconset=dark";
+@icon-widget-suffix:        "?preset=widgets&iconset=dark";
+@icon-selected-suffix:      "?preset=selected&iconset=dark";
 
 @tab-icons-selected-opacity:            1.0;
 @tab-icons-unselected-opacity:          1.0;
