--- a/src/modules/iconset_light/skin/config.less
+++ b/src/modules/iconset_light/skin/config.less
@@ -1,7 +1,7 @@
-@icon-url-suffix:               "?preset=base&iconset=light";
-@icon-toolbar-url-suffix:       "?preset=toolbar&iconset=light";
-@icon-widget-url-suffix:        "?preset=widgets&iconset=light";
-@icon-selected-url-suffix:      "?preset=selected&iconset=light";
+@icon-suffix:               "?preset=base&iconset=light";
+@icon-toolbar-suffix:       "?preset=toolbar&iconset=light";
+@icon-widget-suffix:        "?preset=widgets&iconset=light";
+@icon-selected-suffix:      "?preset=selected&iconset=light";
 
 @tab-icons-selected-opacity:            1.0;
 @tab-icons-unselected-opacity:          0.8;
