Icons: Updated some outdated and ugly icons
(integrated from master branch change 9.2.1-353-g14a2b7f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -91,8 +91,8 @@
 @icon-italictext:               url("chrome://komodo/skin/images/italicButton.png");
 @icon-italictext-disabled:      url("chrome://komodo/skin/images/italicButton_disable.png");
 @icon-clear-text:               url("chrome://fugue/skin/icons/application-run.png");
-@icon-bulletlist:               url("koicon://ko-svg/chrome/icomoon/skin/list.svg@{icon-suffix}");
-@icon-bulletlist-disabled:      url("koicon://ko-svg/chrome/icomoon/skin/list.svg@{icon-suffix}");
+@icon-bulletlist:               url("koicon://ko-svg/chrome/fontawesome/skin/list.svg@{icon-suffix}");
+@icon-bulletlist-disabled:      url("koicon://ko-svg/chrome/fontawesome/skin/list.svg@{icon-suffix}");
 
 /* Global Symbols */
 @icon-warning:                  url("chrome://global/skin/icons/Warning.png");
@@ -112,7 +112,7 @@
 @icon-scroll-arrow-left:        url("chrome://komodo/skin/images/scrollArrowLeft.png");
 @icon-scroll-arrow-left-hover:  url("chrome://komodo/skin/images/scrollArrowLeft_hover.png");
 @icon-scroll-arrow-left-disabled: url("chrome://komodo/skin/images/scrollArrowLeft_disable.png");
-@icon-gear:                     url("koicon://ko-svg/chrome/icomoon/skin/ko_cog_small.svg@{icon-suffix}&size=14");
+@icon-gear:                     url("koicon://ko-svg/chrome/fontawesome/skin/cog.svg@{icon-suffix}");
 @icon-list-item-down:           url("koicon://ko-svg/chrome/icomoon/skin/arrow-down4.svg@{icon-suffix}");
 @icon-list-item-up:             url("koicon://ko-svg/chrome/icomoon/skin/arrow-up4.svg@{icon-suffix}");
 @icon-list-item-add:            url("koicon://ko-svg/chrome/icomoon/skin/plus.svg@{icon-suffix}");
@@ -194,7 +194,7 @@
 @icon-toolbar-paste:            url("koicon://ko-svg/chrome/icomoon/skin/paste2.svg@{icon-toolbar-suffix}");
 @icon-toolbar-print:            url("koicon://ko-svg/chrome/icomoon/skin/print.svg@{icon-toolbar-suffix}");
 @icon-toolbar-help:             url("koicon://ko-svg/chrome/icomoon/skin/question2.svg@{icon-toolbar-suffix}");
-@icon-toolbar-menu:             url("koicon://ko-svg/chrome/icomoon/skin/menu3.svg@{icon-toolbar-suffix}");
+@icon-toolbar-menu:             url("koicon://ko-svg/chrome/icomoon/skin/menu7.svg@{icon-toolbar-suffix}");
 
 /* Toolbars - Tools */
 @icon-toolbar-browser-preview:  url("koicon://ko-svg/chrome/icomoon/skin/earth.svg@{icon-toolbar-suffix}");
@@ -434,7 +434,7 @@
 @icon-hud-open-workspace:           url("koicon://ko-svg/chrome/icomoon/skin/books.svg@{icon-hud-suffix}");
 @icon-hud-gear:                     url("koicon://ko-svg/chrome/icomoon/skin/ko_cog_small.svg@{icon-hud-suffix}&size=14");
 @icon-hud-customize-panes:          url("koicon://ko-svg/chrome/icomoon/skin/grid3.svg@{icon-hud-suffix}");
-@icon-hud-packages:          url("koicon://ko-svg/chrome/icomoon/skin/box-add.svg@{icon-hud-suffix}");
+@icon-hud-packages:                 url("koicon://ko-svg/chrome/icomoon/skin/box-add.svg@{icon-hud-suffix}");
 @icon-hud-case-sensitive:           url("koicon://ko-svg/chrome/icomoon/skin/type.svg@{icon-hud-suffix}");
 @icon-hud-case-insensitive:         url("koicon://ko-svg/chrome/icomoon/skin/font-size.svg@{icon-hud-suffix}");
 @icon-hud-case-smart-size:          url("koicon://ko-svg/chrome/icomoon/skin/text-height.svg@{icon-hud-suffix}");
