--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -209,7 +209,8 @@ menulist dropmarker, textbox[type="autocomplete"] dropmarker,
 {
     -moz-appearance: none !important;
     list-style-image: @icon-dropmarker !important;
-    width: 16px;
+    width: 14px;
+    height: 14px;
 }
 
 /* General Icons */
@@ -319,12 +320,12 @@ menu .help-icon, menuitem .help-icon
 
 .bulletlist-icon
 {
-    list-style-image: @icon-bulletlist;
+    list-style-image: @icon-bulletlist !important;
 }
 
 .bulletlist-icon[disabled="true"]
 {
-    list-style-image: @icon-bulletlist-disabled;
+    list-style-image: @icon-bulletlist-disabled !important;
 }
 
 .scrollright-arrow-mini-icon
@@ -393,12 +394,12 @@ menu .help-icon, menuitem .help-icon
 
 .find-stop-icon
 {
-    list-style-image: @icon-find-stop;
+    list-style-image: @icon-find-stop !important;
 }
 
 .find-stop-icon[disabled="true"]
 {
-    list-style-image: @icon-find-stop-disabled;
+    list-style-image: @icon-find-stop-disabled !important;
 }
 
 .find-undo-icon, /* deprecated since Komodo 7 */
