Commands: The Command Output widget now allows you to run quick commands right from the widget
rn=

(integrated from master branch change 9.2.1-354-ga5e4b47 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -158,7 +158,7 @@
 
 /* Miscellaneous */
 @icon-server-pref:              url("chrome://komodo/skin/global/images/serverAccount.png");
-@icon-run-command:              url("koicon://ko-svg/chrome/icomoon/skin/play4.svg@{icon-suffix}");
+@icon-run-command:              url("koicon://ko-svg/chrome/icomoon/skin/console.svg@{icon-suffix}");
 @icon-power:                    url("koicon://ko-svg/chrome/icomoon/skin/power.svg@{icon-suffix}");
 @icon-print:                    url("koicon://ko-svg/chrome/icomoon/skin/print.svg@{icon-suffix}");
 @icon-pin:                      url("koicon://ko-svg/chrome/icomoon/skin/pushpin.svg@{icon-suffix}");
@@ -455,6 +455,14 @@
 @icon-hud-statusbar-syntax-inprogress:url("koicon://ko-svg/chrome/icomoon/skin/busy4.svg@{icon-hud-suffix}");
 @icon-hud-statusbar-syntax-warning: url("koicon://ko-svg/chrome/icomoon/skin/warning2.svg@{icon-hud-suffix}");
 @icon-hud-statusbar-syntax-error:   url("koicon://ko-svg/chrome/icomoon/skin/cancel-circle2.svg@{icon-hud-suffix}");
+
+@icon-hud-bulletlist:               url("koicon://ko-svg/chrome/fontawesome/skin/list.svg@{icon-hud-suffix}");
+@icon-hud-bulletlist-disabled:      url("koicon://ko-svg/chrome/fontawesome/skin/list.svg@{icon-hud-suffix}");
+
+@icon-hud-find-stop:                url("koicon://ko-svg/chrome/icomoon/skin/stop2.svg@{icon-hud-suffix}");
+@icon-hud-find-stop-disabled:       url("koicon://ko-svg/chrome/icomoon/skin/stop2.svg@{icon-hud-suffix}");
+
+@icon-hud-run-command:              url("koicon://ko-svg/chrome/icomoon/skin/console.svg@{icon-hud-suffix}");
 
 /* Workspace Icons */
 @icon-workspace-open:               url("koicon://ko-svg/chrome/icomoon/skin/books.svg@{icon-suffix}");
