--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -12,6 +12,14 @@
     border: @hud-border;
     border-radius: @hud-border-radius;
     box-shadow: @hud-shadow;
+    
+    &.statusbar
+    {
+        border-left: 0 !important;
+        border-bottom: 0 !important;
+        border-right: 0 !important;
+        border-radius: 0 !important;
+    }
 
     .docked
     {
