--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -356,3 +356,10 @@ vbox[anonid="quickstart"]
     }
 
 }
+
+/* Run Output Pane */
+
+#runoutput-command .textbox-search-icons
+{
+    visibility: collapse;
+}
