--- a/src/modules/notify/skin/notify.less
+++ b/src/modules/notify/skin/notify.less
@@ -5,6 +5,7 @@
     color: #EEE;
     background: rgb(34, 34, 34);
     border-radius: 2px;
+    border: 1px solid rgba(150,150,150, 0.2);
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
 
     &.p-notification
@@ -26,11 +27,26 @@
     {
         background-color: rgb(58, 58, 58);
     }
+    
+    &.lint
+    {
+        padding: 4px;
+        font-size: 0.9rem;
+        
+        button.menu
+        {
+            visibility: collapse;
+        }
+    }
 
     &.clickable description
     {
         cursor: pointer;
-        text-decoration: underline;
+        
+        &:hover
+        {
+            text-decoration: underline;
+        }
     }
 
     description
